--- a/Echarts/recharts/package.json
+++ b/Echarts/recharts/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.3.5",
+    "axios": "^0.19.2",
     "echarts": "^4.8.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
