--- a/Echarts/recharts/package.json
+++ b/Echarts/recharts/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
