--- a/Echarts/recharts/package.json
+++ b/Echarts/recharts/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
     "node-sass": "^4.14.1",
